bidirection in progress
