# product_api/handlers/products.go
@@ -2,8 +2,7 @@ package handlers
 
 import (
 	"fmt"
-	protos "github.com/a1sarpi/QuietPlace/currency/protos/currency"
-	"log"
+	"github.com/hashicorp/go-hclog"
 	"net/http"
 	"strconv"
 
@@ -16,14 +15,14 @@ type KeyProduct struct{}
 
 // Products handler for getting and updating products
 type Products struct {
-	l  *log.Logger
-	v  *data.Validation
-	cc protos.CurrencyClient
+	l         hclog.Logger
+	v         *data.Validation
+	productDB *data.ProductsDB
 }
 
 // NewProducts returns a new products handler with the given logger
-func NewProducts(l *log.Logger, v *data.Validation, cc protos.CurrencyClient) *Products {
-	return &Products{l: l, v: v, cc: cc}
+func NewProducts(l hclog.Logger, v *data.Validation, pdb *data.ProductsDB) *Products {
+	return &Products{l: l, v: v, productDB: pdb}
 }
 
 // ErrInvalidProductsPath is an error message when the product path is not valid
