# product_api/swagger.yaml
@@ -3,7 +3,7 @@ consumes:
     - application/json
 definitions:
     GenericError:
-        description: GenericError GenericError is a generic error message returned by a server
+        description: GenericError GenericError GenericError is a generic error message returned by a server
         properties:
             message:
                 description: message
@@ -12,7 +12,7 @@ definitions:
         type: object
         x-go-package: github.com/a1sarpi/QuietPlace/product_api/sdk/models
     Product:
-        description: Product Product defines the structure for an API product
+        description: Product defines the structure for an API product
         properties:
             description:
                 description: the Description for this product
@@ -32,7 +32,7 @@ definitions:
                 x-go-name: Name
             price:
                 description: the Price for the product
-                format: float
+                format: double
                 type: number
                 x-go-name: Price
             sku:
@@ -45,9 +45,9 @@ definitions:
             - price
             - sku
         type: object
-        x-go-package: github.com/a1sarpi/QuietPlace/product_api/sdk/models
+        x-go-package: github.com/a1sarpi/QuietPlace/product_api/data
     ValidationError:
-        description: ValidationError ValidationError is a collection of validation error messages
+        description: ValidationError ValidationError ValidationError is a collection of validation error messages
         properties:
             message:
                 description: messages
@@ -64,11 +64,18 @@ info:
 paths:
     /products:
         get:
-            description: Returns a list of products from the database
+            description: Return a list of products from the database
             operationId: listProducts
+            parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
             responses:
                 "200":
-                    $ref: '#/responses/productResponse'
+                    $ref: '#/responses/productsResponse'
             tags:
                 - products
         post:
@@ -138,6 +145,12 @@ paths:
             description: Return a list of products from the database
             operationId: listSingleProduct
             parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
                 - description: The id of the product for which the operation relates
                   format: int64
                   in: path
